--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,19 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NYC Mobility Insights</title>
   <link rel="stylesheet" href="styles.css" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <header>
-    <h1>NYC Mobility Insights</h1>
-    <div class="filters">
-      <div class="date-filter">
-        <label>Start<input type="date" id="start"></label>
-        <label>End<input type="date" id="end"></label>
+ <header>
+  <h1>NYC Mobility Insights</h1>
+  <div class="filters">
+    <div class="date-filter">
+      <div class="date-input">
+        <label>Start</label>
+        <input type="date" id="start">
       </div>
-      <button id="refresh">Refresh</button>
+      <div class="date-input">
+        <label>End</label>
+        <input type="date" id="end">
+      </div>
     </div>
-  </header>
+    <button id="refresh">Refresh</button>
+  </div>
+</header>
 
   <main>
     <section class="kpi-cards">
@@ -36,13 +41,6 @@
       <div class="card">
         <div class="card-title">Total Fare ($)</div>
         <div class="card-value" id="kpi-tfare">-</div>
-      </div>
-    </section>
-
-    <section class="charts">
-      <div class="chart-card">
-        <div class="chart-title">Top Pickup Zones</div>
-        <canvas id="topPickupChart"></canvas>
       </div>
     </section>
 
